[tool.poetry]
name = "webstats"
version = "0.1.0"
description = ""
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
duckdb = "^1.1.2"
jupyter = "^1.1.1"
jupysql = "^0.10.14"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
duckdb-engine = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
